# docs/swagger.json
@@ -15,7 +15,7 @@
     "basePath": "/v1",
     "paths": {
         "/user/Login": {
-            "get": {
+            "post": {
                 "description": "使用者登入功能",
                 "consumes": [
                     "application/json"
@@ -29,18 +29,13 @@
                 "summary": "登入",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "使用者名稱",
-                        "name": "username",
-                        "in": "query",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "密碼",
-                        "name": "password",
-                        "in": "query",
-                        "required": true
+                        "description": "Body",
+                        "name": "Login",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "type": "object"
+                        }
                     }
                 ],
                 "responses": {
@@ -57,7 +52,9 @@
                         }
                     }
                 }
-            },
+            }
+        },
+        "/user/Login1": {
             "post": {
                 "description": "使用者登入功能",
                 "consumes": [
