# src/account/Userrouter.go
@@ -11,15 +11,13 @@ import (
 // @Tags User
 // @Accept json
 // @Produce json
-// @Param username query string true "使用者名稱"
-// @Param password query string true "密碼"
+// @Param Login body object true "Body" {"username":"string","password":"string"}
 // @Success 200 {string} string "登入成功"
 // @Failure 400 {string} string "請求失敗"
-// @Router /user/Login [get]
-func AddAccoutrouter(r *gin.RouterGroup) {
+// @Router /user/Login [post]
+func PostAccount(r *gin.RouterGroup) {
 	user := r.Group("/user")
-	user.GET("/Login", servivce.Login)
-
+	user.POST("/Login", servivce.Postlogin)
 }
 
 // @Summary 登入
@@ -31,8 +29,8 @@ func AddAccoutrouter(r *gin.RouterGroup) {
 // @Param password query string true "密碼"
 // @Success 200 {string} string "登入成功"
 // @Failure 400 {string} string "請求失敗"
-// @Router /user/Login [post]
-func PostAccount(r *gin.RouterGroup) {
+// @Router /user/Login1 [post]
+func PostRegister(r *gin.RouterGroup) {
 	user := r.Group("/user")
-	user.POST("/Login", servivce.Postlogin)
+	user.POST("/Login1", servivce.Postlogin)
 }
